--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
       - name: App build, test, tag, and push image to Amazon ECR
         env:
          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-         ECR_REPOSITORY: myapp
+         ECR_REPOSITORY: docker
          IMAGE_TAG: v3.1
         run: | 
           ls -ltra
@@ -57,7 +57,7 @@ jobs:
       - name: MySQL DB build, test, tag, and push image to Amazon ECR
         env:
          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-         ECR_REPOSITORY: mydb
+         ECR_REPOSITORY: mysqldb
          IMAGE_TAG: v2.0
         run: |
           ls -ltra
