--- a/kubernetes_Code/app_replicaset.yaml
+++ b/kubernetes_Code/app_replicaset.yaml
@@ -15,7 +15,7 @@ spec:
         app: employees
     spec:
       containers:
-      - name: app
+      - name: app_sunil
         ports:
           - containerPort: 8080
             protocol: TCP
@@ -24,7 +24,7 @@ spec:
         - name: DBPORT
           value: "3306"
         - name: DBPWD
-          value: "dbpwd"
+          value: "sunil123"
         - name: DBHOST
           value: "mysql.sunil.svc.cluster.local"
         - name: DBUSER
