--- a/kubernetes_Code/app_deployment.yaml
+++ b/kubernetes_Code/app_deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: app
+  name: app_sunil
   labels:
     app: webserver
 spec:
@@ -15,7 +15,7 @@ spec:
         app: employees
     spec:
       containers:
-      - name: app
+      - name: app_sunil
         ports:
           - containerPort: 8080
             protocol: TCP
@@ -24,7 +24,7 @@ spec:
         - name: DBPORT
           value: "3306"
         - name: DBPWD
-          value: "dbpwd"
+          value: "sunil123"
         - name: DBHOST
           value: "mysql.sunil.svc.cluster.local"
         - name: DBUSER
