--- a/kubernetes_Code/mysql_replica.yaml
+++ b/kubernetes_Code/mysql_replica.yaml
@@ -1,14 +1,11 @@
 apiVersion: apps/v1
-kind: Deployment
-# Metadata
+kind: ReplicaSet
 metadata:
-  name: mysql
+  name: mysql-replicaset
   labels:
-    app: mysqlserver
-  name: mysql
-# Adding Spec
+    app: mysql
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
       app: mysql
@@ -17,14 +14,12 @@ spec:
       labels:
         app: mysql
     spec:
-    # Adding container spec
       containers:
       - name: mysql
-      # name of db image
         image: 519511800294.dkr.ecr.us-east-1.amazonaws.com/mysqldb:v2.0
         env:
         - name: MYSQL_ROOT_PASSWORD
-          value: "dbpwd"
+          value: "sunil123"
         ports:
-         - containerPort: 3306
+         - containerPort: 8080
            protocol: TCP
