--- a/kubernetes_Code/mysql_replica.yaml
+++ b/kubernetes_Code/mysql_replica.yaml
@@ -19,7 +19,7 @@ spec:
         image: 519511800294.dkr.ecr.us-east-1.amazonaws.com/mysqldb:v1.0
         env:
         - name: MYSQL_ROOT_PASSWORD
-          value: "sunil123"
+          value: "dbpwd"
         ports:
          - containerPort: 8080
            protocol: TCP
