--- a/kubernetes_Code/mysql_deployment.yaml
+++ b/kubernetes_Code/mysql_deployment.yaml
@@ -1,12 +1,10 @@
 apiVersion: apps/v1
 kind: Deployment
-# Metadata
 metadata:
   name: mysql
   labels:
     app: mysqlserver
   name: mysql
-# Adding Spec
 spec:
   replicas: 1
   selector:
@@ -17,14 +15,12 @@ spec:
       labels:
         app: mysql
     spec:
-    # Adding container spec
       containers:
       - name: mysql
-      # name of db image
         image: 519511800294.dkr.ecr.us-east-1.amazonaws.com/mysqldb:v1.0
         env:
         - name: MYSQL_ROOT_PASSWORD
-          value: "sunil123"
+          value: "dbpwd"
         ports:
          - containerPort: 3306
            protocol: TCP
